Jan 25, 2022
   cleanup: removed some test code

Jan 04, 2022
   updated log4j to avoid zero day exploit

Jun 21, 2021
   fixed code to properly process features

Jun 15, 2021
   updated scripts to better handle processed species list

Mar 26, 2021
   -added loading of new squirrel assembly HiC_ltri_2

Mar 11, 2021
   -added support for 5 new dog assemblies

Feb 25, 2021
  -restored removal of obsolete gene positions

Jan 26, 2021
  -added loading of mRatBN7.2 assembly

Jan 20, 2021
  -removed code to parse UniGene Ids (UniGene database discontinued at NCBI in 2019)

Nov 06, 2020
  -fixed conf to load map positions for molerat

Oct 13, 2020
  -updated config to load mouse assembly GRCm39

Sep 09, 2020
  -non-rat genes (applies to HUMAN and MOUSE): new genes are always loaded, regardless if sequences are present or not
     and MGI ID or HGNC ID is no longer required to load a new gene

Sep 08, 2020
  -tuned up code for transcript versions

Aug 26, 2020
  -updated code to use STABLE_TRANSCRIPTS from rgdcore

Aug 20, 2020
  -added handling of transcript versions in table STABLE_TRANSCRIPTS

Aug 05, 2020
  -qc: fix: Ensembl transcripts are no longer removed from genes

Jul 24, 2020
  -GeneReactivator module has been moved to 'gene-ncbi' project

Jul 07, 2020
  -gene name/symbol changes & nomenclature events are suppressed for genes with nomen source not set to 'NCBI'
  -added support to load latest bonobo assembly 'Mhudiblu_PPA_v0'

Jun 23, 2020
  -human genes: incoming obsolete HGNC IDs are skipped from processing

Jun 17, 2020
  -non-rat genes: gene matching: added 3rd step matching by Ensembl Gene Ids

Jun 16, 2020
  -eg_ids_from_file option extended to allow new gene processing

Apr 20, 2020
  refactored code for handling xdb ids for genes; duplicate HGNC IDs are no longer inserted
    (when incoming HGNC ID is already assigned to different gene, it won't be inserted)

Mar 23, 2020
  fix in how to get primary ref assemblies

Feb 27, 2020